add database connection settings and new user insertion function

--- a/src/transform/insert_client.ipynb
+++ b/src/transform/insert_client.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Responsável por tratar os dados pertinente a cliente"
+    "# Responsável por Importar Clientes"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_210118'"
+       "'20250319_214929'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "id             0\n",
       "razaoSocial    0\n",
       "Email          0\n",
       "Celular        0\n",
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117693\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"19\\\\/03\\\\/2025\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919704\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117695\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"19\\\\/03\\\\/2025\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919706\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
      ]
     }
    ],
@@ -228,7 +229,7 @@
     "df.loc[:, \"statusInsercao\"] = None\n",
     "df.loc[:, \"logRetorno\"] = None\n",
     "\n",
-    "for idx, row in df.iterrows():\n",
+    "for index, row in df.iterrows():\n",
     "    # Mapeamos as colunas do DF para os parâmetros da função inserir_cliente.\n",
     "    razao = row[\"razaoSocial\"]\n",
     "    email = row[\"Email\"]\n",
@@ -242,7 +243,7 @@
     "    numero = row[\"Numero\"]\n",
     "    bairro = row[\"Bairro\"]\n",
     "    cep = row[\"Cep\"]\n",
-    "    idx = row[\"id\"]\n",
+    "    row_id = row[\"id\"]  # use uma variável diferente se precisar do valor da coluna \"id\"\n",
     "    \n",
     "    # Chamamos a função inserir_cliente:\n",
     "    response = inserir_cliente(\n",
@@ -258,32 +259,24 @@
     "        telefone_celular=celular,\n",
     "        email=email,\n",
     "        ie_identidade=rg_ie,\n",
-    "        idx=idx\n",
-    "        # Se você quiser passar outros campos com valores-padrão, inclua aqui\n",
-    "        # Ex.: uf=\"AL\" etc.\n",
+    "        idx=row_id  # se necessário, passe row_id para a função\n",
     "    )\n",
     "    \n",
     "    status_code = response.status_code\n",
     "    content = response.content  # bytes\n",
     "\n",
     "    # Fazemos parse do JSON:\n",
-    "    # b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117580\", ...}'\n",
     "    json_resp = json.loads(content.decode(\"utf-8\", errors=\"replace\"))\n",
     "\n",
     "    if status_code == 200 and json_resp.get(\"type\") == \"success\":\n",
-    "        # Sucesso: capturamos o \"id\"\n",
     "        client_id = json_resp.get(\"id\")  # Exemplo: \"117580\"\n",
-    "        \n",
-    "        df.at[idx, \"idClienteIXC\"] = client_id\n",
-    "        df.at[idx, \"statusInsercao\"] = \"sucesso\"\n",
-    "        # logRetorno pode ficar vazio ou None em caso de sucesso\n",
-    "        df.at[idx, \"logRetorno\"] = json_resp\n",
+    "        df.at[index, \"idClienteIXC\"] = client_id\n",
+    "        df.at[index, \"statusInsercao\"] = \"sucesso\"\n",
+    "        df.at[index, \"logRetorno\"] = json_resp\n",
     "    else:\n",
-    "        # Falha: salvamos o log completo\n",
-    "        df.at[idx, \"idClienteIXC\"] = None\n",
-    "        df.at[idx, \"statusInsercao\"] = \"falha\"\n",
-    "        # Guardamos o JSON completo (ou a chave \"message\", se preferir):\n",
-    "        df.at[idx, \"logRetorno\"] = json_resp"
+    "        df.at[index, \"idClienteIXC\"] = None\n",
+    "        df.at[index, \"statusInsercao\"] = \"falha\"\n",
+    "        df.at[index, \"logRetorno\"] = json_resp"
    ]
   },
   {
@@ -295,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +321,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>razaoSocial</th>\n",
        "      <th>Email</th>\n",
        "      <th>Celular</th>\n",
@@ -348,6 +342,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1306</td>\n",
        "      <td>Abelanio Veríssimo Peixoto</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
@@ -357,10 +352,10 @@
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
        "      <td>Próximo ao cacimbão</td>\n",
-       "      <td>0</td>\n",
+       "      <td>SN</td>\n",
        "      <td>Centro</td>\n",
        "      <td>57830-000</td>\n",
-       "      <td>117693</td>\n",
+       "      <td>117695</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -369,20 +364,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                  razaoSocial            Email      Celular        cpf_cnpj  \\\n",
-       "0  Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999  014.846.390-81   \n",
+       "     id                 razaoSocial            Email      Celular  \\\n",
+       "0  1306  Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999   \n",
        "\n",
-       "    rg_ie filial_id idCidade            Endereco          Complemento Numero  \\\n",
-       "0  Isento        35     1659  Vila São Sebastião  Próximo ao cacimbão      0   \n",
+       "         cpf_cnpj   rg_ie filial_id idCidade            Endereco  \\\n",
+       "0  014.846.390-81  Isento        35     1659  Vila São Sebastião   \n",
        "\n",
-       "   Bairro        Cep idClienteIXC statusInsercao  \\\n",
-       "0  Centro  57830-000       117693        sucesso   \n",
+       "           Complemento Numero  Bairro        Cep idClienteIXC statusInsercao  \\\n",
+       "0  Próximo ao cacimbão     SN  Centro  57830-000       117695        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
