--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Responsável por tratar os dados pertinente a cliente"
+    "# Responsável por Importar Contratos do Cliente"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ambiente: test\n",
+      "API_TOKEN: 655:a59d38d5ec6a664824e6f7ddbc261161e62f25d303a19d890b037f86d15a895b\n",
+      "BASE_URL: https://ixcteste.veloo.com.br\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
@@ -49,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_213911'"
+       "'20250319_221009'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +120,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
        "      <th>razaoSocial</th>\n",
        "      <th>Email</th>\n",
        "      <th>Celular</th>\n",
@@ -131,6 +142,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>1306</td>\n",
        "      <td>Abelanio Veríssimo Peixoto</td>\n",
        "      <td>teste@gmail.com</td>\n",
        "      <td>99999999999</td>\n",
@@ -140,10 +152,10 @@
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
        "      <td>Próximo ao cacimbão</td>\n",
-       "      <td>0</td>\n",
+       "      <td>SN</td>\n",
        "      <td>Centro</td>\n",
        "      <td>57830-000</td>\n",
-       "      <td>117693</td>\n",
+       "      <td>117695</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -152,20 +164,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Unnamed: 0                 razaoSocial            Email      Celular  \\\n",
-       "0          0  Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999   \n",
+       "  Unnamed: 0    id                 razaoSocial            Email      Celular  \\\n",
+       "0          0  1306  Abelanio Veríssimo Peixoto  teste@gmail.com  99999999999   \n",
        "\n",
        "         cpf_cnpj   rg_ie filial_id idCidade            Endereco  \\\n",
        "0  014.846.390-81  Isento        35     1659  Vila São Sebastião   \n",
        "\n",
        "           Complemento Numero  Bairro        Cep idClienteIXC statusInsercao  \\\n",
-       "0  Próximo ao cacimbão      0  Centro  57830-000       117693        sucesso   \n",
+       "0  Próximo ao cacimbão     SN  Centro  57830-000       117695        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +256,7 @@
        "      <td>25</td>\n",
        "      <td>teste1@radios.com</td>\n",
        "      <td>peixoto</td>\n",
-       "      <td>117693</td>\n",
+       "      <td>117695</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -261,10 +273,10 @@
        "0  Próximo ao cacimbão     SN  Centro  57830-000       6824              25   \n",
        "\n",
        "               Login    Senha idClienteIXC  \n",
-       "0  teste1@radios.com  peixoto       117693  "
+       "0  teste1@radios.com  peixoto       117695  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +306,9 @@
     "    'Bairro',\n",
     "    'Cep',\n",
     "    'idPlanoIXC',\n",
-    "    'idVencimentoIXC'\n",
+    "    'idVencimentoIXC',\n",
+    "    'Login',\n",
+    "    'Senha'\n",
     "]\n",
     "\n",
     "# Filtra o DataFrame para manter apenas essas colunas\n",
@@ -310,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -368,6 +382,8 @@
       "Cep                0\n",
       "idPlanoIXC         0\n",
       "idVencimentoIXC    0\n",
+      "Login              0\n",
+      "Senha              0\n",
       "dtype: int64\n"
      ]
     },
@@ -401,12 +417,14 @@
        "      <th>Cep</th>\n",
        "      <th>idPlanoIXC</th>\n",
        "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>117693</td>\n",
+       "      <td>117695</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -415,6 +433,8 @@
        "      <td>57830-000</td>\n",
        "      <td>6824</td>\n",
        "      <td>25</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -422,13 +442,13 @@
       ],
       "text/plain": [
        "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
-       "0       117693        35     1659  Vila São Sebastião     SN  Centro   \n",
+       "0       117695        35     1659  Vila São Sebastião     SN  Centro   \n",
        "\n",
-       "         Cep idPlanoIXC idVencimentoIXC  \n",
-       "0  57830-000       6824              25  "
+       "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \n",
+       "0  57830-000       6824              25  teste1@radios.com  peixoto  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +469,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"154043\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"P\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117693\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2025-03-19\"}]}'\n"
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"154045\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"P\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117695\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2025-03-19\"}]}'\n"
      ]
     }
    ],
@@ -482,6 +502,7 @@
     "    id_vendedor = \"1\"             # Id vendedor (fixo, conforme o exemplo)\n",
     "    data_base_financeira = \"01/01/2024\"  # Data base financeira (pode ser fixo ou calculado conforme sua regra)\n",
     "    descricao_aux_plano_venda = \"IMPORTAÇÃO\"       # Tipo de contrato (fixo)\n",
+    "    contrato = \"IMPORTAÇÃO\"       # Descricao Plano - Atualizar no Update\n",
     "    id_carteira_cobranca = \"67\"   # Id da carteira de cobrança (fixo)\n",
     "\n",
     "    # Chamamos a função inserir_contrato com os parâmetros mapeados:\n",
@@ -494,6 +515,7 @@
     "        id_filial=id_filial,\n",
     "        id_vendedor=id_vendedor,\n",
     "        data_base_financeira=data_base_financeira,\n",
+    "        contrato=contrato,\n",
     "        descricao_aux_plano_venda=descricao_aux_plano_venda,\n",
     "        id_carteira_cobranca=id_carteira_cobranca,\n",
     "        cep=cep,\n",
@@ -532,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,6 +596,8 @@
        "      <th>Cep</th>\n",
        "      <th>idPlanoIXC</th>\n",
        "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
        "      <th>idContratoIXC</th>\n",
        "      <th>statusInsercao</th>\n",
        "      <th>logRetorno</th>\n",
@@ -582,7 +606,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>117693</td>\n",
+       "      <td>117695</td>\n",
        "      <td>35</td>\n",
        "      <td>1659</td>\n",
        "      <td>Vila São Sebastião</td>\n",
@@ -591,7 +615,9 @@
        "      <td>57830-000</td>\n",
        "      <td>6824</td>\n",
        "      <td>25</td>\n",
-       "      <td>154043</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "      <td>154045</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -601,16 +627,19 @@
       ],
       "text/plain": [
        "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
-       "0       117693        35     1659  Vila São Sebastião     SN  Centro   \n",
+       "0       117695        35     1659  Vila São Sebastião     SN  Centro   \n",
        "\n",
-       "         Cep idPlanoIXC idVencimentoIXC idContratoIXC statusInsercao  \\\n",
-       "0  57830-000       6824              25        154043        sucesso   \n",
+       "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
+       "0  57830-000       6824              25  teste1@radios.com  peixoto   \n",
+       "\n",
+       "  idContratoIXC statusInsercao  \\\n",
+       "0        154045        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
