--- a/src/transform/insert_login.ipynb
+++ b/src/transform/insert_login.ipynb
@@ -175,6 +175,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'executa_query' from 'config.settings' (c:\\Users\\wesll\\import_data_ixc\\config\\settings.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m path_raiz = os.path.abspath(os.path.join(\u001b[33m\"\u001b[39m\u001b[33m..\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m..\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      6\u001b[39m sys.path.append(path_raiz)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msettings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m executa_query\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'executa_query' from 'config.settings' (c:\\Users\\wesll\\import_data_ixc\\config\\settings.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Carregando pacote que estao fora de /transform\n",
+    "path_raiz = os.path.abspath(os.path.join(\"..\", \"..\"))\n",
+    "sys.path.append(path_raiz)\n",
+    "\n",
+    "from config.settings import executa_query"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
